refatored the mouse move to use OS idle time